// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should set props to MarkerInput 1`] = `
<div
  onKeyPress={[Function]}
>
  <div
    className="ui inverted input"
    style={
      Object {
        "marginBottom": "10px",
        "marginRight": "3px",
        "marginTop": "10px",
      }
    }
  >
    <input
      onChange={[Function]}
      placeholder="lat,lng"
      type="text"
      value=""
    />
  </div>
  <button
    className="ui icon button"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="marker icon"
      onClick={[Function]}
    />
  </button>
  <button
    className="ui icon button"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="trash icon"
      onClick={[Function]}
    />
  </button>
</div>
`;

exports[`Should set props to MarkerInput(datum is Tokyo) 1`] = `
<div
  onKeyPress={[Function]}
>
  <div
    className="ui error inverted input"
    style={
      Object {
        "marginBottom": "10px",
        "marginRight": "3px",
        "marginTop": "10px",
      }
    }
  >
    <input
      onChange={[Function]}
      placeholder="lat,lng"
      type="text"
      value="lat,lng"
    />
  </div>
  <button
    className="ui icon button"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="marker icon"
      onClick={[Function]}
    />
  </button>
  <button
    className="ui icon button"
    onClick={[Function]}
  >
    <i
      aria-hidden="true"
      className="trash icon"
      onClick={[Function]}
    />
  </button>
  <div
    className="ui negative message"
  >
    <div
      className="header"
    >
      Waffle Map Error
    </div>
    <p>
      It seems there was something wrong ...
    </p>
  </div>
</div>
`;
